--- a/openApiDocs/v1.0/DeviceManagement.Enrollment.yml
+++ b/openApiDocs/v1.0/DeviceManagement.Enrollment.yml
@@ -10,8 +10,11 @@ paths:
     get:
       tags:
         - deviceManagement.onPremisesConditionalAccessSettings
-      summary: Get conditionalAccessSettings from deviceManagement
-      description: The Exchange on premises conditional access settings. On premises conditional access will require devices to be both enrolled and compliant for mail access
+      summary: Get onPremisesConditionalAccessSettings
+      description: Read properties and relationships of the onPremisesConditionalAccessSettings object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-onpremisesconditionalaccesssettings-get?view=graph-rest-1.0
       operationId: deviceManagement_GetConditionalAccessSetting
       parameters:
         - name: $select
@@ -47,7 +50,11 @@ paths:
     patch:
       tags:
         - deviceManagement.onPremisesConditionalAccessSettings
-      summary: Update the navigation property conditionalAccessSettings in deviceManagement
+      summary: Update onPremisesConditionalAccessSettings
+      description: Update the properties of a onPremisesConditionalAccessSettings object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-onpremisesconditionalaccesssettings-update?view=graph-rest-1.0
       operationId: deviceManagement_UpdateConditionalAccessSetting
       requestBody:
         description: New navigation property values
@@ -88,8 +95,11 @@ paths:
     get:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Get deviceEnrollmentConfigurations from deviceManagement
-      description: The list of device enrollment configurations
+      summary: List deviceEnrollmentPlatformRestrictionsConfigurations
+      description: List properties and relationships of the deviceEnrollmentPlatformRestrictionsConfiguration objects.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-deviceenrollmentplatformrestrictionsconfiguration-list?view=graph-rest-1.0
       operationId: deviceManagement_ListDeviceEnrollmentConfiguration
       parameters:
         - $ref: '#/components/parameters/top'
@@ -139,7 +149,11 @@ paths:
     post:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Create new navigation property to deviceEnrollmentConfigurations for deviceManagement
+      summary: Create deviceEnrollmentLimitConfiguration
+      description: Create a new deviceEnrollmentLimitConfiguration object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-deviceenrollmentlimitconfiguration-create?view=graph-rest-1.0
       operationId: deviceManagement_CreateDeviceEnrollmentConfiguration
       requestBody:
         description: New navigation property
@@ -162,8 +176,11 @@ paths:
     get:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Get deviceEnrollmentConfigurations from deviceManagement
-      description: The list of device enrollment configurations
+      summary: Get deviceEnrollmentWindowsHelloForBusinessConfiguration
+      description: Read properties and relationships of the deviceEnrollmentWindowsHelloForBusinessConfiguration object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-deviceenrollmentwindowshelloforbusinessconfiguration-get?view=graph-rest-1.0
       operationId: deviceManagement_GetDeviceEnrollmentConfiguration
       parameters:
         - name: deviceEnrollmentConfiguration-id
@@ -207,7 +224,11 @@ paths:
     patch:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Update the navigation property deviceEnrollmentConfigurations in deviceManagement
+      summary: Update deviceEnrollmentLimitConfiguration
+      description: Update the properties of a deviceEnrollmentLimitConfiguration object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-deviceenrollmentlimitconfiguration-update?view=graph-rest-1.0
       operationId: deviceManagement_UpdateDeviceEnrollmentConfiguration
       parameters:
         - name: deviceEnrollmentConfiguration-id
@@ -238,7 +259,11 @@ paths:
     delete:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Delete navigation property deviceEnrollmentConfigurations for deviceManagement
+      summary: Delete deviceEnrollmentWindowsHelloForBusinessConfiguration
+      description: Deletes a deviceEnrollmentWindowsHelloForBusinessConfiguration.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-deviceenrollmentwindowshelloforbusinessconfiguration-delete?view=graph-rest-1.0
       operationId: deviceManagement_DeleteDeviceEnrollmentConfiguration
       parameters:
         - name: deviceEnrollmentConfiguration-id
@@ -265,8 +290,11 @@ paths:
     get:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Get assignments from deviceManagement
-      description: The list of group assignments for the device configuration profile
+      summary: List enrollmentConfigurationAssignments
+      description: List properties and relationships of the enrollmentConfigurationAssignment objects.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-enrollmentconfigurationassignment-list?view=graph-rest-1.0
       operationId: deviceManagement.deviceEnrollmentConfiguration_ListAssignment
       parameters:
         - name: deviceEnrollmentConfiguration-id
@@ -324,7 +352,11 @@ paths:
     post:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Create new navigation property to assignments for deviceManagement
+      summary: Create enrollmentConfigurationAssignment
+      description: Create a new enrollmentConfigurationAssignment object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-enrollmentconfigurationassignment-create?view=graph-rest-1.0
       operationId: deviceManagement.deviceEnrollmentConfiguration_CreateAssignment
       parameters:
         - name: deviceEnrollmentConfiguration-id
@@ -356,8 +388,11 @@ paths:
     get:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Get assignments from deviceManagement
-      description: The list of group assignments for the device configuration profile
+      summary: Get enrollmentConfigurationAssignment
+      description: Read properties and relationships of the enrollmentConfigurationAssignment object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-enrollmentconfigurationassignment-get?view=graph-rest-1.0
       operationId: deviceManagement.deviceEnrollmentConfiguration_GetAssignment
       parameters:
         - name: deviceEnrollmentConfiguration-id
@@ -409,7 +444,11 @@ paths:
     patch:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Update the navigation property assignments in deviceManagement
+      summary: Update enrollmentConfigurationAssignment
+      description: Update the properties of a enrollmentConfigurationAssignment object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-enrollmentconfigurationassignment-update?view=graph-rest-1.0
       operationId: deviceManagement.deviceEnrollmentConfiguration_UpdateAssignment
       parameters:
         - name: deviceEnrollmentConfiguration-id
@@ -448,7 +487,11 @@ paths:
     delete:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Delete navigation property assignments for deviceManagement
+      summary: Delete enrollmentConfigurationAssignment
+      description: Deletes a enrollmentConfigurationAssignment.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-enrollmentconfigurationassignment-delete?view=graph-rest-1.0
       operationId: deviceManagement.deviceEnrollmentConfiguration_DeleteAssignment
       parameters:
         - name: deviceEnrollmentConfiguration-id
@@ -519,8 +562,11 @@ paths:
     get:
       tags:
         - deviceManagement.importedWindowsAutopilotDeviceIdentity
-      summary: Get importedWindowsAutopilotDeviceIdentities from deviceManagement
-      description: Collection of imported Windows autopilot devices.
+      summary: List importedWindowsAutopilotDeviceIdentities
+      description: List properties and relationships of the importedWindowsAutopilotDeviceIdentity objects.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-enrollment-importedwindowsautopilotdeviceidentity-list?view=graph-rest-1.0
       operationId: deviceManagement_ListImportedWindowsAutopilotDeviceIdentity
       parameters:
         - $ref: '#/components/parameters/top'
@@ -570,7 +616,11 @@ paths:
     post:
       tags:
         - deviceManagement.importedWindowsAutopilotDeviceIdentity
-      summary: Create new navigation property to importedWindowsAutopilotDeviceIdentities for deviceManagement
+      summary: Create importedWindowsAutopilotDeviceIdentity
+      description: Create a new importedWindowsAutopilotDeviceIdentity object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-enrollment-importedwindowsautopilotdeviceidentity-create?view=graph-rest-1.0
       operationId: deviceManagement_CreateImportedWindowsAutopilotDeviceIdentity
       requestBody:
         description: New navigation property
@@ -593,8 +643,11 @@ paths:
     get:
       tags:
         - deviceManagement.importedWindowsAutopilotDeviceIdentity
-      summary: Get importedWindowsAutopilotDeviceIdentities from deviceManagement
-      description: Collection of imported Windows autopilot devices.
+      summary: Get importedWindowsAutopilotDeviceIdentity
+      description: Read properties and relationships of the importedWindowsAutopilotDeviceIdentity object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-enrollment-importedwindowsautopilotdeviceidentity-get?view=graph-rest-1.0
       operationId: deviceManagement_GetImportedWindowsAutopilotDeviceIdentity
       parameters:
         - name: importedWindowsAutopilotDeviceIdentity-id
@@ -669,7 +722,11 @@ paths:
     delete:
       tags:
         - deviceManagement.importedWindowsAutopilotDeviceIdentity
-      summary: Delete navigation property importedWindowsAutopilotDeviceIdentities for deviceManagement
+      summary: Delete importedWindowsAutopilotDeviceIdentity
+      description: Deletes a importedWindowsAutopilotDeviceIdentity.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-enrollment-importedwindowsautopilotdeviceidentity-delete?view=graph-rest-1.0
       operationId: deviceManagement_DeleteImportedWindowsAutopilotDeviceIdentity
       parameters:
         - name: importedWindowsAutopilotDeviceIdentity-id
@@ -710,8 +767,11 @@ paths:
     get:
       tags:
         - deviceManagement.windowsAutopilotDeviceIdentity
-      summary: Get windowsAutopilotDeviceIdentities from deviceManagement
-      description: The Windows autopilot device identities contained collection.
+      summary: List windowsAutopilotDeviceIdentities
+      description: List properties and relationships of the windowsAutopilotDeviceIdentity objects.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-enrollment-windowsautopilotdeviceidentity-list?view=graph-rest-1.0
       operationId: deviceManagement_ListWindowsAutopilotDeviceIdentity
       parameters:
         - $ref: '#/components/parameters/top'
@@ -761,7 +821,11 @@ paths:
     post:
       tags:
         - deviceManagement.windowsAutopilotDeviceIdentity
-      summary: Create new navigation property to windowsAutopilotDeviceIdentities for deviceManagement
+      summary: Create windowsAutopilotDeviceIdentity
+      description: Create a new windowsAutopilotDeviceIdentity object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-enrollment-windowsautopilotdeviceidentity-create?view=graph-rest-1.0
       operationId: deviceManagement_CreateWindowsAutopilotDeviceIdentity
       requestBody:
         description: New navigation property
@@ -784,8 +848,11 @@ paths:
     get:
       tags:
         - deviceManagement.windowsAutopilotDeviceIdentity
-      summary: Get windowsAutopilotDeviceIdentities from deviceManagement
-      description: The Windows autopilot device identities contained collection.
+      summary: Get windowsAutopilotDeviceIdentity
+      description: Read properties and relationships of the windowsAutopilotDeviceIdentity object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-enrollment-windowsautopilotdeviceidentity-get?view=graph-rest-1.0
       operationId: deviceManagement_GetWindowsAutopilotDeviceIdentity
       parameters:
         - name: windowsAutopilotDeviceIdentity-id
@@ -860,7 +927,11 @@ paths:
     delete:
       tags:
         - deviceManagement.windowsAutopilotDeviceIdentity
-      summary: Delete navigation property windowsAutopilotDeviceIdentities for deviceManagement
+      summary: Delete windowsAutopilotDeviceIdentity
+      description: Deletes a windowsAutopilotDeviceIdentity.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/intune-enrollment-windowsautopilotdeviceidentity-delete?view=graph-rest-1.0
       operationId: deviceManagement_DeleteWindowsAutopilotDeviceIdentity
       parameters:
         - name: windowsAutopilotDeviceIdentity-id
@@ -1402,7 +1473,7 @@ components:
           properties:
             appScopeId:
               type: string
-              description: 'Identifier of the app specific scope when the assignment scope is app specific. The scope of an assignment determines the set of resources for which the principal has been granted access. App scopes are scopes that are defined and understood by a resource application only. For the entitlement management provider, use this property to specify a catalog, for example /AccessPackageCatalog/beedadfe-01d5-4025-910b-84abb9369997. Supports $filter (eq, in). For example /roleManagement/entitlementManagement/roleAssignments?$filter=appScopeId eq ''/AccessPackageCatalog/{catalog id}''.'
+              description: 'Identifier of the app specific scope when the assignment scope is app specific. The scope of an assignment determines the set of resources for which the principal has been granted access. App scopes are scopes that are defined and understood by a resource application only. For the entitlement management provider, use this property to specify a catalog. For example, /AccessPackageCatalog/beedadfe-01d5-4025-910b-84abb9369997. Supports $filter (eq, in). For example, /roleManagement/entitlementManagement/roleAssignments?$filter=appScopeId eq ''/AccessPackageCatalog/{catalog id}''.'
               nullable: true
             condition:
               type: string
